# SimpleGame

./: CMakeLists.txt  EBO.cpp  EBO.h  README.md  VAO.cpp  VAO.h  VBO.cpp  VBO.h  defult.frag  defult.vert  glad.c  main.cpp  mandelbrotCalc.cpp  mandelbrotCalc.h  utils.cpp  utils.h
